2010-09-23  Nate Chapin  <japhet@chromium.org>

        Reviewed by Darin Fisher.

        Add hyperlink auditing settings (i.e., <a ping>).
        https://bugs.webkit.org/show_bug.cgi?id=30458

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):
        (webkit_web_view_settings_notify):

2010-09-22  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Replace instances of g_timeout_add() with g_idle_add() in testatk.c
        https://bugs.webkit.org/show_bug.cgi?id=46284

        Use g_idle_add() whenever g_timeout_add() was being used.

        This is desired because it's better to rely on the main loop to
        decide when it's a good moment to execute the task (when idle)
        than manually setting a timeout, which also sets a minimum amount
        of time needed to get the function executed.

        * tests/testatk.c:
        (testWekitAtkTextSelections):
        (testWebkitAtkGetExtents):
        (testWebkitAtkListsOfItems):
        (main):

2010-09-22  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [Gtk] object:text-changed events should be emitted for entries and password text
        https://bugs.webkit.org/show_bug.cgi?id=25898

        New unit test to make sure text-changed signals are emitted

        * tests/testatk.c:
        (textChangedCb): New. Signal handler for the
        text-changed::insert and text-changed::delete signals.
        (checkTextChangesAndBailOut): New. Source function to check
        the global result of the test and quit from the main loop.
        (testWebkitAtkTextChangedNotifications): New test.
        (main):

2010-09-22  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.
