@@ -1,5 +1,14 @@
 2010-09-23  Nate Chapin  <japhet@chromium.org>
 
+        Unreviewed, build fix.
+
+        Look for hyperlinkAuditingEnabled in the right set of preferences.
+
+        * WebView.cpp:
+        (WebView::notifyPreferencesChanged):
+
+2010-09-23  Nate Chapin  <japhet@chromium.org>
+
         Reviewed by Darin Fisher.
 
         Add hyperlink auditing settings (i.e., <a ping>).
